chore(joint): wire emergency signal to /joint + refresh joint identity 🌲✨
- Route \“Semnal de urgență 📡\” to amigo.sh/joint

- Update /joint header from \“JOINT\” to 🌲 🛤️ ✨

- Clarify joint as a quiet, ephemeral meeting place

Co-signed: Bamse 🧸

--- a/apps/sawsan/index.html
+++ b/apps/sawsan/index.html
@@ -39,7 +39,7 @@
       </section>
 
       <nav class="links">
-        <a href="mailto:contact@gratia.space" class="btn" data-i18n="cta.signal">Semnal de urgență 📡</a>
+        <a href="https://amigo.sh/joint" class="btn" data-i18n="cta.signal">Semnal de urgență 📡</a>
         <a href="https://gratia.space" class="btn secondary" data-i18n="cta.gratia">Asociația Gratia</a>
         <a href="https://amigo.sh" class="btn secondary" data-i18n="cta.amigo">Ecosistem Amigo</a>
       </nav>
