feat(portal): update sawsan canon + joint landing copy
- Add topic label + refresh translations in sawsan portal

- Style topic line for visual hierarchy

- Set joint landing to Dosarele / Files manifesto

Co-signed: Bamse 🧸

Co-signed: Van Damme 🐍

--- a/apps/sawsan/index.html
+++ b/apps/sawsan/index.html
@@ -38,6 +38,8 @@
         <p data-i18n="motto">„Proiectez orașe care luminează 🏙️✨ · Claritate în sistem 🧬 · Flow în familie 🧭”</p>
       </section>
 
+      <p class="topic" data-i18n="topic">Dosarele / Files</p>
+
       <nav class="links">
         <a href="https://amigo.sh/joint" class="btn" data-i18n="cta.signal">Semnal de urgență 📡</a>
         <a href="https://gratia.space" class="btn secondary" data-i18n="cta.gratia">Asociația Gratia</a>
@@ -58,31 +60,34 @@
     <script>
       const translations = {
         ro: {
-          subtitle: "Designer de orașe · City of Lights ✨",
-          motto: "„Proiectez orașe care luminează 🏙️✨ · Claritate în sistem 🧬 · Flow în familie 🧭”",
+          subtitle: "Arhitecta Vínculo-ului ⚜️",
+          motto: "Țin Vínculo-ul viu 💖 · Țin ADN-ul curat 🧬 · Țin forța în corp 🏋️",
           "cta.signal": "Semnal de urgență 📡",
           "cta.gratia": "Asociația Gratia",
           "cta.amigo": "Ecosistem Amigo",
           status: "Status: Vínculo protejat 🔗",
-          offline: "Creat să reziste. Chiar și fără net. ⚓"
+          offline: "Creat să reziste. Chiar și fără net. ⚓",
+          topic: "Dosarele / Files"
         },
         en: {
-          subtitle: "Urban designer · City of Lights ✨",
-          motto: "“I design cities that shine 🏙️✨ · Clarity in systems 🧬 · Flow in family 🧭”",
+          subtitle: "Architect of the Vínculo ⚜️",
+          motto: "Keeping the Vínculo alive 💖 · Keeping the DNA clean 🧬 · Keeping the strength in the body 🏋️",
           "cta.signal": "Emergency signal 📡",
           "cta.gratia": "Gratia Association",
           "cta.amigo": "Amigo Ecosystem",
           status: "Status: Protected bond 🔗",
-          offline: "Built to endure. Even without signal. ⚓"
+          offline: "Built to resist. Even without signal. ⚓",
+          topic: "Files / Archives"
         },
         es: {
-          subtitle: "Diseñadora urbana · City of Lights ✨",
-          motto: "“Diseño ciudades que brillan 🏙️✨ · Claridad en sistemas 🧬 · Flujo en familia 🧭”",
+          subtitle: "Arquitecta del Vínculo ⚜️",
+          motto: "Manteniendo el Vínculo vivo 💖 · Manteniendo el ADN limpio 🧬 · Manteniendo la fuerza en el cuerpo 🏋️",
           "cta.signal": "Señal de urgencia 📡",
           "cta.gratia": "Asociación Gratia",
           "cta.amigo": "Ecosistema Amigo",
           status: "Estado: Vínculo protegido 🔗",
-          offline: "Creado para resistir. Incluso sin señal. ⚓"
+          offline: "Creado para resistir. Incluso sin señal. ⚓",
+          topic: "Los Archivos"
         }
       };
 
