feat(portal): shift sawsan translations to dosare canon
- Add topic label with files marker

- Swap motto/status/offline to survival copy

Co-signed: Bamse 🧸

Co-signed: Van Damme 🐍

--- a/apps/sawsan/index.html
+++ b/apps/sawsan/index.html
@@ -38,7 +38,7 @@
         <p data-i18n="motto">„Proiectez orașe care luminează 🏙️✨ · Claritate în sistem 🧬 · Flow în familie 🧭”</p>
       </section>
 
-      <p class="topic" data-i18n="topic">Dosarele / Files</p>
+      <p class="topic" data-i18n="topic">Dosarele / Files 🗂️</p>
 
       <nav class="links">
         <a href="https://amigo.sh/joint" class="btn" data-i18n="cta.signal">Semnal de urgență 📡</a>
@@ -60,34 +60,34 @@
     <script>
       const translations = {
         ro: {
+          topic: "Dosarele / Files 🗂️",
           subtitle: "Arhitecta Vínculo-ului ⚜️",
-          motto: "Țin Vínculo-ul viu 💖 · Țin ADN-ul curat 🧬 · Țin forța în corp 🏋️",
+          motto: "„Vreți democrație? Nicio problemă, o facem tot noi. - I”",
           "cta.signal": "Semnal de urgență 📡",
           "cta.gratia": "Asociația Gratia",
           "cta.amigo": "Ecosistem Amigo",
-          status: "Status: Vínculo protejat 🔗",
-          offline: "Creat să reziste. Chiar și fără net. ⚓",
-          topic: "Dosarele / Files"
+          status: "Status: Vínculo protejat 🛡️",
+          offline: "Creat să reziste. Chiar și fără net. ⚓"
         },
         en: {
+          topic: "The Files / Dosarele 🗂️",
           subtitle: "Architect of the Vínculo ⚜️",
-          motto: "Keeping the Vínculo alive 💖 · Keeping the DNA clean 🧬 · Keeping the strength in the body 🏋️",
-          "cta.signal": "Emergency signal 📡",
+          motto: "“You want democracy? No problem, we'll do it ourselves. - I”",
+          "cta.signal": "Emergency Signal 📡",
           "cta.gratia": "Gratia Association",
           "cta.amigo": "Amigo Ecosystem",
-          status: "Status: Protected bond 🔗",
-          offline: "Built to resist. Even without signal. ⚓",
-          topic: "Files / Archives"
+          status: "Status: Vínculo protected 🛡️",
+          offline: "Built to resist. Even without signal. ⚓"
         },
         es: {
+          topic: "Los Archivos / Files 🗂️",
           subtitle: "Arquitecta del Vínculo ⚜️",
-          motto: "Manteniendo el Vínculo vivo 💖 · Manteniendo el ADN limpio 🧬 · Manteniendo la fuerza en el cuerpo 🏋️",
+          motto: "“¿Queréis democracia? No hay problema, la hacemos nosotros. - I”",
           "cta.signal": "Señal de urgencia 📡",
           "cta.gratia": "Asociación Gratia",
           "cta.amigo": "Ecosistema Amigo",
-          status: "Estado: Vínculo protegido 🔗",
-          offline: "Creado para resistir. Incluso sin señal. ⚓",
-          topic: "Los Archivos"
+          status: "Estado: Vínculo protegido 🛡️",
+          offline: "Creado para resistir. Incluso sin señal. ⚓"
         }
       };
 
