feat(joint): add covenant page + confirm polish
- Add short covenant page at /covenant

- Improve confirm button tap target

- Restore City of Lights subtitle

Co-signed: Bamse 🧸

Co-signed: Van Damme 🐍

--- a/apps/sawsan/index.html
+++ b/apps/sawsan/index.html
@@ -61,7 +61,7 @@
       const translations = {
         ro: {
           topic: "Dosarele / Files 🗂️",
-          subtitle: "Arhitecta Vínculo-ului ⚜️",
+          subtitle: "Designer de orașe · City of Lights ✨",
           motto: "„Vreți democrație? Nicio problemă, o facem tot noi. - I”",
           "cta.signal": "Semnal de urgență 📡",
           "cta.gratia": "Asociația Gratia",
@@ -71,7 +71,7 @@
         },
         en: {
           topic: "The Files / Dosarele 🗂️",
-          subtitle: "Architect of the Vínculo ⚜️",
+          subtitle: "Urban designer · City of Lights ✨",
           motto: "“You want democracy? No problem, we'll do it ourselves. - I”",
           "cta.signal": "Emergency Signal 📡",
           "cta.gratia": "Gratia Association",
@@ -81,7 +81,7 @@
         },
         es: {
           topic: "Los Archivos / Files 🗂️",
-          subtitle: "Arquitecta del Vínculo ⚜️",
+          subtitle: "Diseñadora urbana · City of Lights ✨",
           motto: "“¿Queréis democracia? No hay problema, la hacemos nosotros. - I”",
           "cta.signal": "Señal de urgencia 📡",
           "cta.gratia": "Asociación Gratia",
